@@ -1,5 +1,10 @@
 2005-11-09  Roland Dreier  <roland@cisco.com>
 
+	* src/srq.c (mthca_tavor_post_srq_recv), src/qp.c
+	(mthca_tavor_post_recv): Fix bugs in long receive list handling;
+	need to set nreq to 0 and not put 256 credits into the second
+	doorbell word.
+
 	* src/cq.c (mthca_cq_clean): Handle case where CQ indices wrap
 	around by treating signed comparisons of prod_index and
 	cq->cons_index carefully.
